# rustLearnage

./: .gitignore  README.md  notes.rs  replaceauthor
helper_scripts/: c  e  go
insanity/: Cargo.toml
insanity/src/: main.rs
newrustacean/: e
newrustacean/e002/: e002.rs
rust_book/: env.sh  source.txt
rust_book/adder/: Cargo.toml  c  e  go
rust_book/arrays/: Cargo.toml
rust_book/closures/: Cargo.toml
rust_book/diverges/: Cargo.toml  go_with_backtrace
rust_book/enum/: Cargo.toml
rust_book/for/: Cargo.toml
rust_book/guessing_game/: Cargo.toml  e
rust_book/guessing_game/src/: main.rs
rust_book/hello_world/: c  e  go
rust_book/if/: Cargo.toml
rust_book/iterators/: Cargo.toml
rust_book/loop/: Cargo.toml
rust_book/match/: test1
rust_book/method/: Cargo.toml
rust_book/ordering/: Cargo.toml
rust_book/ownership/: Cargo.toml
rust_book/patterns/: Cargo.toml
rust_book/phrases/: Cargo.toml  go
rust_book/pointer/: Cargo.toml
rust_book/scope/: Cargo.toml
rust_book/strings/: Cargo.toml
rust_book/struct/: Cargo.toml
rust_book/tuple/: Cargo.toml
rust_book/while/: Cargo.toml
rust_bugstest/20542/: main.rs  run  three.rs  two.rs
rust_bugstest/21492/: letest  main.rs
rust_bugstest/21595/: go  main.rs
rust_bugstest/21624/: e  main.rs
rust_misc/cryptic errors/: .gitignore  deadcode.rs  go
rust_oddities/confuzzled_errors/: char.rs
rust_oddities/match_nonvar/: Cargo.toml
rust_oddities/re-let/: Cargo.toml
rust_oddities/variable_shadowing_in_match/: Cargo.toml  test1
rust_reference/: url.txt
rustbyexample/: go
(+52 files in other folders)
