#created by running: cargo new guessing_game --bin
#yep I typed this.
#the --bin flag, since we're making a binary, rather than a library.

[package]

name = "guessing_game"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]
#Cargo gets this information from your environment. If it's not correct, go ahead and fix that.
#
